Source/JavaScriptCore/bytecode/EvalCodeCache.h
@@ -47,9 +47,9 @@ namespace JSC {
         // Specialized cache key (compared with SourceCodeKey) for eval code cache.
         class CacheKey {
         public:
-            CacheKey(const String& source, DerivedContextType derivedContextType, EvalContextType evalContextType, bool isArrowFunctionContext)
+            CacheKey(const String& source, CallSiteIndex callSiteIndex)
                 : m_source(source.impl())
-                , m_flags(SourceCodeType::EvalType, JSParserBuiltinMode::NotBuiltin, JSParserStrictMode::NotStrict, JSParserScriptMode::Classic, derivedContextType, evalContextType, isArrowFunctionContext)
+                , m_callSiteIndex(callSiteIndex)
             {
             }
 
@@ -60,13 +60,13 @@ namespace JSC {
 
             CacheKey() = default;
 
-            unsigned hash() const { return m_source->hash(); }
+            unsigned hash() const { return m_source->hash() ^ m_callSiteIndex.bits(); }
 
             bool isEmptyValue() const { return !m_source; }
 
             bool operator==(const CacheKey& other) const
             {
-                return m_source == other.m_source && m_flags == other.m_flags;
+                return m_callSiteIndex == other.m_callSiteIndex && m_source == other.m_source;
             }
 
             bool isHashTableDeletedValue() const { return m_source.isHashTableDeletedValue(); }
@@ -78,7 +78,7 @@ namespace JSC {
                 }
                 static bool equal(const CacheKey& lhs, const CacheKey& rhs)
                 {
-                    return StringHash::equal(lhs.m_source, rhs.m_source) && lhs.m_flags == rhs.m_flags;
+                    return lhs == rhs;
                 }
                 static const bool safeToCompareToEmptyOrDeleted = false;
             };
@@ -87,19 +87,15 @@ namespace JSC {
 
         private:
             RefPtr<StringImpl> m_source;
-            SourceCodeFlags m_flags;
+            CallSiteIndex m_callSiteIndex;
         };
 
-        EvalExecutable* tryGet(bool inStrictContext, const String& evalSource, DerivedContextType derivedContextType, EvalContextType evalContextType, bool isArrowFunctionContext, JSScope* scope)
+        EvalExecutable* tryGet(const String& evalSource, CallSiteIndex callSiteIndex)
         {
-            if (isCacheable(inStrictContext, evalSource, scope)) {
-                ASSERT(!inStrictContext);
-                return m_cacheMap.fastGet(CacheKey(evalSource, derivedContextType, evalContextType, isArrowFunctionContext)).get();
-            }
-            return nullptr;
+            return m_cacheMap.fastGet(CacheKey(evalSource, callSiteIndex)).get();
         }
         
-        EvalExecutable* getSlow(ExecState* exec, JSCell* owner, bool inStrictContext, DerivedContextType derivedContextType, EvalContextType evalContextType, bool isArrowFunctionContext, const String& evalSource, JSScope* scope)
+        EvalExecutable* getSlow(ExecState* exec, JSCell* owner, const String& evalSource, CallSiteIndex callSiteIndex, bool inStrictContext, DerivedContextType derivedContextType, EvalContextType evalContextType, bool isArrowFunctionContext, JSScope* scope)
         {
             VariableEnvironment variablesUnderTDZ;
             JSScope::collectVariablesUnderTDZ(scope, variablesUnderTDZ);
@@ -107,11 +103,9 @@ namespace JSC {
             if (!evalExecutable)
                 return nullptr;
 
-            if (isCacheable(inStrictContext, evalSource, scope) && m_cacheMap.size() < maxCacheEntries) {
-                ASSERT(!inStrictContext);
-                m_cacheMap.set(CacheKey(evalSource, derivedContextType, evalContextType, isArrowFunctionContext), WriteBarrier<EvalExecutable>(exec->vm(), owner, evalExecutable));
-            }
-            
+            if (m_cacheMap.size() < maxCacheEntries)
+                m_cacheMap.set(CacheKey(evalSource, callSiteIndex), WriteBarrier<EvalExecutable>(exec->vm(), owner, evalExecutable));
+
             return evalExecutable;
         }
 
@@ -125,19 +119,6 @@ namespace JSC {
         }
 
     private:
-        ALWAYS_INLINE bool isCacheableScope(JSScope* scope)
-        {
-            return scope->isGlobalLexicalEnvironment() || scope->isFunctionNameScopeObject() || scope->isVarScope();
-        }
-
-        ALWAYS_INLINE bool isCacheable(bool inStrictContext, const String& evalSource, JSScope* scope)
-        {
-            // If eval() is called and it has access to a lexical scope, we can't soundly cache it.
-            // If the eval() only has access to the "var" scope, then we can cache it.
-            return !inStrictContext 
-                && static_cast<size_t>(evalSource.length()) < Options::maximumEvalCacheableSourceLength()
-                && isCacheableScope(scope);
-        }
         static const int maxCacheEntries = 64;
 
         typedef HashMap<CacheKey, WriteBarrier<EvalExecutable>, CacheKey::Hash, CacheKey::HashTraits> EvalCacheMap;
